--- a/.github/workflows/build-gui_mac_no_signed.yml
+++ b/.github/workflows/build-gui_mac_no_signed.yml
@@ -22,13 +22,13 @@ on:
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: macos-15
 
     steps:
       - name: Select XCode version
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: latest-stable
+          xcode-version: '16.4'
 
       - name: Check out the repo
         uses: actions/checkout@v4
