--- a/.github/workflows/build-gui_mac_no_signed.yml
+++ b/.github/workflows/build-gui_mac_no_signed.yml
@@ -5,7 +5,7 @@ on:
     tags:
       - '*'
     branches:
-      - main
+      - master
       - v2.2x
     paths:
       - '.github/workflows/build-gui_mac_no_signed.yml'
@@ -13,7 +13,7 @@ on:
 
   pull_request:
     branches:
-      - main
+      - master
     paths:
       - '.github/workflows/build-gui_mac_no_signed.yml'
       - 'gui/src/**'
